# mcmods

./: Cargo.toml  LICENSE  completions.nu  flake.nix
mods/: lock.json
nix/: default.nix  shell.nix
src/: api.rs  io.rs  lib.rs  lock.rs  main.rs  util.rs
src/cli/: install.rs  list.rs  mod.rs  remove.rs  sync.rs  upgrade.rs
