[package]
name = "mcmods"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
digest = "0.10.7"
futures = "0.3.31"
hex = "0.4.3"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = { version = "0.10.8"}
tokio = { version = "1.44.2", features = ["full"] }
